[gd_scene load_steps=2 format=3 uid="uid://dneodoenbog0q"]

[ext_resource type="Script" path="res://scripts/global/UI/level_up.gd" id="1_npmk2"]

[node name="LevelUp" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_npmk2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -356.0
offset_top = -134.0
offset_right = 354.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -345.0
offset_top = -132.0
offset_right = 345.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Panel/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(230, 0)
layout_direction = 1
layout_mode = 2
text = "+1 ball"

[node name="Button2" type="Button" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
text = "+25% damage "

[node name="Button3" type="Button" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
text = "trird"

[connection signal="pressed" from="Panel/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
